--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,19 @@
 # BlueJ files
 *.ctxt
 
+# Intellij
+.idea/
+*.iml
+*.iws
+
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -21,3 +34,19 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#idea
+out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
+
+# IntelliJ
+out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
